--- a/pipelines/03-pipeline.yml
+++ b/pipelines/03-pipeline.yml
@@ -34,3 +34,15 @@ jobs:
       echo blabla
       echo blabla
     displayName: 'Run a multi-line script'
+- job: Job4
+  dependsOn: 
+  - Job2
+  - Job3
+  steps:
+  - script: echo Job4
+    displayName: 'Run a one-line script'
+
+  - script: |
+      echo blabla
+      echo blabla
+    displayName: 'Run a multi-line script'
