--- a/pipelines/05-pipeline.yml
+++ b/pipelines/05-pipeline.yml
@@ -10,20 +10,25 @@ stages:
   - job: FirstJob
     steps:
     - bash: echo Build FirstJob
+    - bash: echo $(PipelineLevelVariable)
   - job: SecondJob
     steps:
     - bash: echo Build SecondJob
 - stage: DevDeploy
+  variables: 
+    environment: Dev
   dependsOn: Build
   jobs: 
   - job: DevDeployJob
     steps:
-    - bash: echo Build DevDeployJob
+    - bash: echo $(environment)DeployJob
 - stage: QADeploy
+  variables: 
+    environment: QA
   jobs: 
   - job: QADeployJob
     steps:
-    - bash: echo Build QADeployJob
+    - bash: echo $(environment)DeployJob
 - stage: ProdDeploy
   dependsOn: Build
   jobs: 
