--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,7 +17,7 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool: 'Default'
+    pool: 'AGU'
     steps:
     - task: Docker@2
       displayName: Build an image
