--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -6,8 +6,9 @@
 trigger:
 - main
 
-pool: 'AGU'
-
+pool:
+  vmImage: 'ubuntu-latest'
+ 
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
