--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,29 +1,20 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
-- main
+- master
 
-resources:
-- repo: self
+pool:
+ vmImage: 'ubuntu-latest'
 
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool: 'AGU'
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        containerRegistry: 'dockerhub'
-        repository: 'brunopraciano/curso-agu'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        tags: '$(tag)'
+# Pipeline > Stages > Jobs > Task (steps)
+jobs:
+- job: Job1
+  steps:
+  - script: echo Job1
+    displayName: 'Executar script de linha unica'
+  - script: |
+      echo Login realizado
+      echo DB salvo com sucesso
+    displayName: 'Autenticacao'
+- job: Job2
+  steps: 
+  - script: echo Run Job2
+    displayName: 'Job2'
