--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -15,6 +15,27 @@ jobs:
       echo DB salvo com sucesso
     displayName: 'Autenticacao'
 - job: Job2
+  dependsOn: Job1
   steps: 
   - script: echo Run Job2
     displayName: 'Job2'
+
+- job: Job3
+  dependsOn: Job2
+  steps: 
+  - script: echo Run Job3
+    displayName: 'Job3'
+
+- job: Job4
+  dependsOn: Job3
+  steps: 
+  - script: echo Run Job4
+    displayName: 'Job4'
+
+- job: Job5
+  dependsOn: 
+  - Job1
+  - Job2
+  steps: 
+  - script: echo Run Job5
+    displayName: 'Job5'
