--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,20 +12,25 @@ stages:
   - job: BuildImageDocker
     steps:
     - bash: echo BuildImageDocker
+    - bash: echo $(PipelineLevelVariable)
   - job: PushImageDocker
     steps:
     - bash: echo Build SecondJob
 
 - stage: DevDeploy
+  variables:
+    environment: Dev
   dependsOn: Build
   jobs: 
   - job: DevDeploy
     steps:
-    - bash: echo Build FirstJob
+    - bash: echo $(environment)DeployJob
 
 - stage: TestDeploy
+  variables:
+    environment: QA
   dependsOn: DevDeploy
   jobs: 
   - job: TestDeploy
     steps:
-    - bash: echo Deploy Homologacao
+    - bash: echo $(environment)DeployJob
