Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,7 +20,7 @@ stages:
 
     - task: CopyFiles@2
       inputs:
-        SourceFolder: '$(Build.DefaultWorkingDirectory)'
+        SourceFolder: $(Build.DefaultWorkingDirectory)
         Contents: |
          **/*.yaml
          **/*.tf
