Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,6 +21,6 @@ stages:
   jobs:
   - deployment: DevDeployJob
     environment: Dev
-  - job: DevDeployJob
+  - job: DevDeployJob11
     steps:
     - bash: echo $(environment)DeployJob
