Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,7 +28,7 @@ stages:
   - Build
   - DevDeploy
   jobs:
-  - deployment: ProdDeployJob
+  - deployment: ProdDeployJobDeployment
     environment: Prod
   - job: ProdDeployJob
     steps:
